# sepia

./: Cargo.toml  README.md
assets/models/: Wolf.glb
assets/models/car/: scene.gltf
assets/shaders/envmap/: envmap.vs.glsl  glass.fs.glsl  mirror.fs.glsl
assets/shaders/gltf/: depth.fs.glsl  flashlight.fs.glsl  gltf.fs.glsl  gltf.vs.glsl  lamp.fs.glsl  lamp.vs.glsl  lit.fs.glsl  lit.vs.glsl  outline.fs.glsl  outline.vs.glsl
assets/shaders/model/: model.fs.glsl  model.vs.glsl
assets/shaders/multitexture/: multitexture.fs.glsl
assets/shaders/skybox/: skybox.vs.glsl
assets/shaders/texture/: screen.fs.glsl  texture.vs.glsl
docs/: Architecture.md  TODO.md
examples/: cubes.rs  ecs.rs  framebuffer.rs  gltf.rs  indexed.rs  model.rs  multitexture.rs  skybox.rs  texture.rs  triangle.rs  window.rs
src/: app.rs  buffer.rs  camera.rs  gltf.rs  lib.rs  main.rs  mesh.rs  model.rs  shader.rs  shaderprogram.rs  skybox.rs  texture.rs  vao.rs
src/support/: camera.rs  lib.rs  shader.rs  skybox.rs  texture.rs
