[package]
name = "sepia"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
glfw = "0.33.0"
gl = "0.14.0"
image = "0.22.3"
tobj = "0.1.11"
collada = "0.12.0"
nalgebra = "0.18.1"
nalgebra-glm = "0.5.0"
nphysics3d = "0.12.3"
petgraph = "0.4.13"

[dependencies.gltf]
version = "0.14"
features = ["extras", "names"]